# kafs-user

./: .gitignore  CMakeLists.txt  README.md  kAFS-user.files  kAFS-user.includes
etc/: CMakeLists.txt  afs.mount  kafs-init.service  kafs-session
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/kafs/: CMakeLists.txt  kafs-user.c  kafs-user.h  kafs_locl.c  kafs_locl.h  rxkad_kdf-hml.c  rxkad_kdf-mit.c
src/lib/pam-kafs-session/: CMakeLists.txt  internal.h  local.c  public.c
